fix default dash in TS

--- a/GPIO MINI/GPIO_MINI_V0_001/reference/mini_gpio_V0_001.ini
+++ b/GPIO MINI/GPIO_MINI_V0_001/reference/mini_gpio_V0_001.ini
@@ -692,53 +692,55 @@ cmdStopTestMode = "E\x00\x01"
 cmdEnableTestMode = "E\x01\x01"
 
 cmdtestout1on = "E\x01\x02"
-cmdtestout1off = "E\x02\x02"
-cmdtestout150dc = "E\x03\x02"
-cmdtestout2on = "E\x04\x02"
-cmdtestout2off = "E\x05\x02"
-cmdtestout250dc = "E\x06\x02"
-cmdtestout3on = "E\x07\x02"
-cmdtestout3off = "E\x08\x02"
-cmdtestout350dc = "E\x09\x02"
-cmdtestout4on = "E\x0A\x02"
-cmdtestout4off = "E\x0B\x02"
-cmdtestout450dc = "E\x0C\x02"
-cmdtestout5on = "E\x0D\x02"
-cmdtestout5off = "E\x0E\x02"
-cmdtestout550dc = "E\x0F\x02"
-cmdtestout6on = "E\x10\x02"
-cmdtestout6off = "E\x11\x02"
-cmdtestout650dc = "E\x12\x02"
-cmdtestout7on = "E\x13\x02"
-cmdtestout7off = "E\x14\x02"
-cmdtestout750dc = "E\x15\x02"
-cmdtestout8on = "E\x16\x02"
-cmdtestout8off = "E\x17\x02"
-cmdtestout850dc = "E\x18\x02"
-cmdtestout9on = "E\x19\x02"
-cmdtestout9off = "E\x1A\x02"
-cmdtestout950dc = "E\x1B\x02"
-cmdtestout10on = "E\x1C\x02"
-cmdtestout10off = "E\x1D\x02"
-cmdtestout1050dc = "E\x1E\x02"
-cmdtestout11on = "E\x1F\x02"
-cmdtestout11off = "E\x20\x02"
-cmdtestout1150dc = "E\x21\x02"
-cmdtestout12on = "E\x22\x02"
-cmdtestout12off = "E\x23\x02"
-cmdtestout1250dc = "E\x24\x02"
-cmdtestout13on = "E\x25\x02"
-cmdtestout13off = "E\x26\x02"
-cmdtestout1350dc = "E\x27\x02"
-cmdtestout14on = "E\x28\x02"
-cmdtestout14off = "E\x29\x02"
-cmdtestout1450dc = "E\x2A\x02"
-cmdtestout15on = "E\x2B\x02"
-cmdtestout15off = "E\x2C\x02"
-cmdtestout1550dc = "E\x2D\x02"
-cmdtestout16on = "E\x2E\x02"
-cmdtestout16off = "E\x2F\x02"
-cmdtestout1650dc = "E\x30\x02"
+cmdtestout2on = "E\x02\x02"
+cmdtestout3on = "E\x03\x02"
+cmdtestout4on = "E\x04\x02"
+cmdtestout5on = "E\x05\x02"
+cmdtestout6on = "E\x06\x02"
+cmdtestout7on = "E\x07\x02"
+cmdtestout8on = "E\x08\x02"
+cmdtestout9on = "E\x09\x02"
+cmdtestout10on = "E\x0A\x02"
+cmdtestout11on = "E\x0B\x02"
+cmdtestout12on = "E\x0C\x02"
+cmdtestout13on = "E\x0D\x02"
+cmdtestout14on = "E\x0E\x02"
+cmdtestout15on = "E\x0F\x02"
+cmdtestout16on = "E\x10\x02"
+
+cmdtestout1off = "E\x01\x03"
+cmdtestout2off = "E\x02\x03"
+cmdtestout3off = "E\x03\x03"
+cmdtestout4off = "E\x04\x03"
+cmdtestout5off = "E\x05\x03"
+cmdtestout6off = "E\x06\x03"
+cmdtestout7off = "E\x07\x03"
+cmdtestout8off = "E\x08\x03"
+cmdtestout9off = "E\x09\x03"
+cmdtestout10off = "E\x0A\x03"
+cmdtestout11off = "E\x0B\x03"
+cmdtestout12off = "E\x0C\x03"
+cmdtestout13off = "E\x0D\x03"
+cmdtestout14off = "E\x0E\x03"
+cmdtestout15off = "E\x0F\x03"
+cmdtestout16off = "E\x10\x03"
+
+cmdtestout150dc = "E\x01\x04"
+cmdtestout250dc = "E\x02\x04"
+cmdtestout350dc = "E\x03\x04"
+cmdtestout450dc = "E\x04\x04"
+cmdtestout550dc = "E\x05\x04"
+cmdtestout650dc = "E\x06\x04"
+cmdtestout750dc = "E\x07\x04"
+cmdtestout850dc = "E\x08\x04"
+cmdtestout950dc = "E\x09\x04"
+cmdtestout1050dc = "E\x0A\x04"
+cmdtestout1150dc = "E\x0B\x04"
+cmdtestout1250dc = "E\x0C\x04"
+cmdtestout1350dc = "E\x0D\x04"
+cmdtestout1450dc = "E\x0E\x04"
+cmdtestout1550dc = "E\x0F\x04"
+cmdtestout1650dc = "E\x10\x04"
 
 #endif
 
@@ -841,26 +843,6 @@ cmdtestout1650dc = "E\x30\x02"
    ;tpsADCGauge       = tpsADC,        "TPS ADC",            "",        0,   255,     -1,    -1,  256,  256, 0, 0
    #batVoltGauge      = batteryVoltage,        "BAT V",              "",        0,   255,     -1,    -1,  256,  256, 0, 0
 
-   gaugeCategory = "Room Zone Sensor inputs"
-;	Bedroom1			= Bedroom1_Temp,			"Bedroom 1"					"",				0,		35,	-1,		-1,	36,		36,	0,	0
-;	Bedroom2			= Bedroom2_Temp,			"Bedroom 2"					"",				0,		35,	-1,		-1,	36,		36,	0,	0
-;	MasterBedroomAIR	= MasterBedroomAIR_Temp,	"Master Bedroom AIR"		"",				0,		35,	-1,		-1,	36,		36,	0,	0
-;	MasterBedroomFLOOR	= MasterBedroomFLOOR_Temp,	"Master Bedroom FLOOR"		"",				0,		35,	-1,		-1,	36,		36,	0,	0
-;	FamiyBathroom		= FamilyBathroom_Temp,		"Family Bathroom"			"",				0,		35,	-1,		-1,	36,		36,	0,	0
-;	MasterEnsuiteAIR	= MasterEnsuiteAIR_Temp,		"Master Ensuite Air"		"",				0,		35,	-1,		-1,	36,		36,	0,	0
-;	MasterEnsuiteFLOOR	= MasterEnsuiteFLOOR_Temp,	"Master Ensuite Floor"		"",				0,		35,	-1,		-1,	36,		36,	0,	0
-;	1stLanding			= 1stLanding_Temp,			"1st Landing"				"",				0,		35,	-1,		-1,	36,		36,	0,	0
-;	UpperGNDHallAIR		= UpperGNDHallAIR_Temp,		"Upper Ground Hall Air"		"",				0,		35,	-1,		-1,	36,		36,	0,	0
-;	UpperGNDHallFLOOR	= UpperGNDHallFLOOR_Temp,	"Upper Ground Hall Floor"	"",				0,		35,	-1,		-1,	36,		36,	0,	0
-;	LowerGNDHallAIR		= LowerGNDHallAIR_Temp,		"Lower Ground Hall Air"		"",				0,		35,	-1,		-1,	36,		36,	0,	0
-;	LowerGNDHallFLOOR	= LowerGNDHallFLOOR_Temp,	"Lower Ground Hall Floor"	"",				0,		35,	-1,		-1,	36,		36,	0,	0
-;	KitchenAIR			= KitchenAIR_Temp,			"Kitchen Air"				"",				0,		35,	-1,		-1,	36,		36,	0,	0
-;	KitchenFLOOR		= KitchenFLOOR_Temp,		"Kitchen Floor"				"",				0,		35,	-1,		-1,	36,		36,	0,	0
-;	LivingRoomAIR		= LivingRoomAIR_Temp,		"Living Room Air"			"",				0,		35,	-1,		-1,	36,		36,	0,	0
-;	LivingRoomFLOOR		= LivingRoomFLOOR_Temp,		"Living Room Floor"			"",				0,		35,	-1,		-1,	36,		36,	0,	0
-;	DiningRoomAIR		= DiningRoomAIR_Temp,		"Dining Room Air"			"",				0,		35,	-1,		-1,	36,		36,	0,	0
-;	DiningRoomFLOOR		= DiningRoomFLOOR_Temp,		"Dining Room Floor"			"",				0,		35,	-1,		-1,	36,		36,	0,	0
-
    	gaugeCategory = "AnalogInputs"
 	AinGauge1		= Ain1,		"Analog In1"				"",				0,		1024,	-1,		-1,	1025,		1025,	0,	0
 	AinGauge2		= Ain2,		"Analog In2"				"",				0,		1024,	-1,		-1,	1025,		1025,	0,	0
@@ -897,13 +879,13 @@ cmdtestout1650dc = "E\x30\x02"
    ;    1  2  3  4
    ;    5  6  7  8
 
-   ;gauge1 = tachometer
-   ;gauge2 = 
-   ;gauge3 = pulseWidthGauge
-   ;gauge4 = dutyCycleGauge
-   ;gauge5 = mapGauge
-   ;gauge6 = iatGauge
-   ;gauge7 = cltGauge
+   gauge1 = clockGauge 
+   gauge2 = AinGauge1
+   gauge3 = AinGauge2
+  ; gauge4 = dutyCycleGauge
+   gauge5 = loopGauge
+   gauge6 = AinGauge3
+   gauge7 = AinGauge4
    ;gauge8 = gammaEnrichGauge
 
    ;----------------------------------------------------------------------------
