added uno mcu compile options !untested!

--- a/GPIO MINI/GPIO_MINI_V0_001/reference/mini_gpio_V0_001.ini
+++ b/GPIO MINI/GPIO_MINI_V0_001/reference/mini_gpio_V0_001.ini
@@ -31,6 +31,8 @@
     ;settingOption = DEFAULT, "kPa"
     ;settingOption = BOOSTPSI, "PSI"
     settingGroup = enablehardware_test, "Enable Hardware Test Page"
+	settingGroup = gearbox_type, "Gearbox Type"
+	settingOption = a340e, "A340E"
 
 [PcVariables]
    ; valid types: boolean, double, int, list
