add v0.003disp correct logger error in ini file for all v0.003 versions

--- a/GPIO MINI/GPIO_MINI_V0_003/reference/mini gpiov0_003.ini
+++ b/GPIO MINI/GPIO_MINI_V0_003/reference/mini gpiov0_003.ini
@@ -1234,24 +1234,24 @@ cmdtestout1650dc = "E\x30\x02"
    entry = time,            "Time",        float,  "%.3f"
    entry = secl,            "SecL",        int,    "%d"
    entry = digitalinputs1_8 "Dig in 1-8"   int,    "%d"
-   entry = digitalinputs1 "Dig in 1"   int,    "%d"
-   entry = digitalinputs2 "Dig in 2"   int,    "%d"
-   entry = digitalinputs3 "Dig in 3"   int,    "%d"
-   entry = digitalinputs4 "Dig in 4"   int,    "%d"
-   entry = digitalinputs5 "Dig in 5"   int,    "%d"
-   entry = digitalinputs6 "Dig in 6"   int,    "%d"
-   entry = digitalinputs7 "Dig in 7"   int,    "%d"
-   entry = digitalinputs8 "Dig in 8"   int,    "%d"
+   entry = digitalinput1 "Dig in 1"   int,    "%d"
+   entry = digitalinput2 "Dig in 2"   int,    "%d"
+   entry = digitalinput3 "Dig in 3"   int,    "%d"
+   entry = digitalinput4 "Dig in 4"   int,    "%d"
+   entry = digitalinput5 "Dig in 5"   int,    "%d"
+   entry = digitalinput6 "Dig in 6"   int,    "%d"
+   entry = digitalinput7 "Dig in 7"   int,    "%d"
+   entry = digitalinput8 "Dig in 8"   int,    "%d"
    entry = digitalinputs9_16 "Dig in 9-16"   int,    "%d"
-   entry = digitalinputs1_8 "Dig in 9"   int,    "%d"
-   entry = digitalinputs1_8 "Dig in 10"   int,    "%d"
-   entry = digitalinputs1_8 "Dig in 11"   int,    "%d"
-   entry = digitalinputs1_8 "Dig in 12"   int,    "%d"
-   entry = digitalinputs1_8 "Dig in 13"   int,    "%d"
-   entry = digitalinputs1_8 "Dig in 14"   int,    "%d"
-   entry = digitalinputs1_8 "Dig in 15"   int,    "%d"
-   entry = digitalinputs1_8 "Dig in 16"   int,    "%d"
-   entry = digitalinputs1_8 "Dig in 1-8"   int,    "%d"
+   entry = digitalinput9 "Dig in 9"   int,    "%d"
+   entry = digitalinput10 "Dig in 10"   int,    "%d"
+   entry = digitalinput11 "Dig in 11"   int,    "%d"
+   entry = digitalinput12 "Dig in 12"   int,    "%d"
+   entry = digitalinput13 "Dig in 13"   int,    "%d"
+   entry = digitalinput14 "Dig in 14"   int,    "%d"
+   entry = digitalinput15 "Dig in 15"   int,    "%d"
+   entry = digitalinput16 "Dig in 16"   int,    "%d"
+   ;entry = digitalinputs8 "Dig in 1-8"   int,    "%d"
    ;entry = engine,          "Engine",      int,    "%d"
    ;entry = canin_gauge1,    "CanIn CH1",   int,     "%d"
    ;entry = canin_gauge2,    "CanIn CH2",   int,     "%d"
