--- a/GPIO MINI/GPIO_MINI_V0_003/reference/mini gpiov0_003.ini
+++ b/GPIO MINI/GPIO_MINI_V0_003/reference/mini gpiov0_003.ini
@@ -502,7 +502,7 @@ menuDialog = main
         field = "GPIO Device Real CanID", master_controller_address
         field = "GPIO Board Pin Layout",       pinLayout 
 		field = "Connection to Speeduino Type", speeduinoConnection
-		field = "Speeduino Base CanBus Address", speeduinoBaseCan
+		field = "Speeduino Realtime Base CanBus Address", speeduinoBaseCan
 			
 	dialog = input_offset_selectionC, "Source Base CanID"
 		field = "", INdata_from_Can0, {exinsel0}
