--- a/GPIO MINI/mini_gpiov3_001/reference/mini gpiov3_001.ini
+++ b/GPIO MINI/mini_gpiov3_001/reference/mini gpiov3_001.ini
@@ -109,7 +109,7 @@
    burnCommand         = "B\001" , "B\002"
    pageActivate        = "P\001" , "P\002"
    pageReadCommand     = "V" , "V"
-   pageValueWrite      = "W\01%2o%v" , "W\01%2o%v"
+   pageValueWrite      = "W\x01%2o%v" , "W\x02%2o%v"
 #endif
    ;  pageChunkWrite      = ""      ; No chunk write for standard MS
 
@@ -502,7 +502,7 @@ menuDialog = main
         field = "GPIO Device Real CanID", master_controller_address
         field = "GPIO Board Pin Layout",       pinLayout 
 		field = "Connection to Speeduino Type", speeduinoConnection
-		field = "Speeduino Base CanBus Address", speeduinoBaseCan
+		field = "Speeduino Realtime Base CanBus Address", speeduinoBaseCan
 			
 	dialog = input_offset_selectionC, "Source Base CanID"
 		field = "", INdata_from_Can0, {exinsel0}
@@ -1244,14 +1244,14 @@ cmdtestout1650dc = "E\x30\x02"
    entry = digitalinput8 "Dig in 8"   int,    "%d"
    entry = digitalinputs9_16 "Dig in 9-16"   int,    "%d"
    entry = digitalinputs1_8 "Dig in 9"   int,    "%d"
-   entry = digitalinput9 "Dig in 10"   int,    "%d"
-   entry = digitalinput10 "Dig in 11"   int,    "%d"
-   entry = digitalinput11 "Dig in 12"   int,    "%d"
-   entry = digitalinput12 "Dig in 13"   int,    "%d"
-   entry = digitalinput13 "Dig in 14"   int,    "%d"
-   entry = digitalinput14 "Dig in 15"   int,    "%d"
-   entry = digitalinput15 "Dig in 16"   int,    "%d"
-   entry = digitalinput16 "Dig in 1-8"   int,    "%d"
+   entry = digitalinput9 "Dig in 9"   int,    "%d"
+   entry = digitalinput10 "Dig in 10"   int,    "%d"
+   entry = digitalinput11 "Dig in 11"   int,    "%d"
+   entry = digitalinput12 "Dig in 12"   int,    "%d"
+   entry = digitalinput13 "Dig in 13"   int,    "%d"
+   entry = digitalinput14 "Dig in 14"   int,    "%d"
+   entry = digitalinput15 "Dig in 15"   int,    "%d"
+   entry = digitalinput16 "Dig in 16"   int,    "%d"
    ;entry = engine,          "Engine",      int,    "%d"
    ;entry = canin_gauge1,    "CanIn CH1",   int,     "%d"
    ;entry = canin_gauge2,    "CanIn CH2",   int,     "%d"
