improved loop speed update to new realtime polling method added alias names to EXinputs including gauges

--- a/GPIO MINI/mini_gpiov3_001/reference/mini gpiov3_001.ini
+++ b/GPIO MINI/mini_gpiov3_001/reference/mini gpiov3_001.ini
@@ -43,7 +43,22 @@
    ;
    ; type List: value will be index.
     tsCanId        	= bits,   	U08,   [0:3], "CAN ID 0", "CAN ID 1", "CAN ID 2", "CAN ID 3", "CAN ID 4", "CAN ID 5", "CAN ID 6", "CAN ID 7", "CAN ID 8", "CAN ID 9", "CAN ID 10","CAN ID 11","CAN ID 12","CAN ID 13","CAN ID 14","INVALID"
-
+	EXin00Alias  = string, ASCII, 20
+	EXin01Alias  = string, ASCII, 20 
+    EXin02Alias  = string, ASCII, 20 
+    EXin03Alias  = string, ASCII, 20 
+    EXin04Alias  = string, ASCII, 20 
+    EXin05Alias  = string, ASCII, 20 
+    EXin06Alias  = string, ASCII, 20 
+    EXin07Alias  = string, ASCII, 20 
+    EXin08Alias  = string, ASCII, 20 
+    EXin09Alias  = string, ASCII, 20 
+    EXin10Alias  = string, ASCII, 20 
+    EXin11Alias  = string, ASCII, 20 
+    EXin12Alias  = string, ASCII, 20 
+    EXin13Alias  = string, ASCII, 20 
+    EXin14Alias  = string, ASCII, 20 
+    EXin15Alias  = string, ASCII, 20 
 [Constants]
 
    ;----------------------------------------------------------------------------
@@ -411,8 +426,24 @@ page = 2
 [ConstantsExtensions]
 ;    requiresPowerCycle = boostMaxDuty
 	 requiresPowerCycle = pinLayout
+	 
      defaultValue = pinLayout,   1
-
+	 defaultValue = EXin00Alias, "EXin 00"
+	 defaultValue = EXin01Alias, "EXin 01"
+     defaultValue = EXin02Alias, "EXin 02"
+     defaultValue = EXin03Alias, "EXin 03"
+     defaultValue = EXin04Alias, "EXin 04"
+     defaultValue = EXin05Alias, "EXin 05"
+     defaultValue = EXin06Alias, "EXin 06"
+     defaultValue = EXin07Alias, "EXin 07"
+     defaultValue = EXin08Alias, "EXin 08"
+     defaultValue = EXin09Alias, "EXin 09"
+     defaultValue = EXin10Alias, "EXin 10"
+     defaultValue = EXin11Alias, "EXin 11"
+     defaultValue = EXin12Alias, "EXin 12"
+     defaultValue = EXin13Alias, "EXin 13"
+     defaultValue = EXin14Alias, "EXin 14"
+	 defaultValue = EXin15Alias, "EXin 15"
     ;Default pins
 
     ;defaultValue = tachoPin,    0
@@ -558,6 +589,25 @@ menuDialog = main
 		field = "", num_bytes14, {exinsel14}
 		field = "", num_bytes15, {exinsel15}
 		
+    dialog = input_alias, "", yAxis
+        field = "Input Alias"
+        field = "", EXin00Alias	, {exinsel0}
+	    field = "", EXin01Alias , {exinsel1}
+        field = "", EXin02Alias , {exinsel2}
+        field = "", EXin03Alias , {exinsel3}
+        field = "", EXin04Alias , {exinsel4}
+        field = "", EXin05Alias , {exinsel5}
+        field = "", EXin06Alias , {exinsel6}
+        field = "", EXin07Alias , {exinsel7}
+        field = "", EXin08Alias , {exinsel8}
+        field = "", EXin09Alias , {exinsel9}
+        field = "", EXin10Alias , {exinsel10}
+        field = "", EXin11Alias , {exinsel11}
+        field = "", EXin12Alias , {exinsel12}
+        field = "", EXin13Alias , {exinsel13}
+        field = "", EXin14Alias , {exinsel14}
+        field = "", EXin15Alias , {exinsel15}		
+		
 	dialog = input_offset_selectionW, "External Input offset Selection"
 		field = "Channel 0 select", exinsel0 
 		field = "Channel 1 select", exinsel1 
@@ -577,6 +627,7 @@ menuDialog = main
 		field = "Channel 15 select", exinsel15	
 		
 	dialog = external_input	,""	,xAxis
+		panel = input_alias
 		panel = input_offset_selectionW, West
 		panel = input_offset_selectionC, Center
 		panel = input_offset_selectionE, East
@@ -986,22 +1037,22 @@ cmdtestout1650dc = "E\x30\x02"
     AinGauge15		= Ain15,		"Analog In15"				"",				0,		1024,	-1,		-1,	1025,		1025,	0,	0
 
    	gaugeCategory = "External Inputs"
-	EXinGauge0		= EXin0,		"External In0"				"",				0,		65534,  -1,		-1,	65535,		65535,	0,	0
-	EXinGauge1		= EXin1,		"External In1"				"",				0,		65534,	-1,		-1,	65535,		65535,	0,	0
-	EXinGauge2		= EXin2,		"External In2"				"",				0,		65534,	-1,		-1,	65535,		65535,	0,	0
-    EXinGauge3		= EXin3,		"External In3"				"",				0,		65534,	-1,		-1,	65535,		65535,	0,	0
-	EXinGauge4		= EXin4,		"External In4"				"",				0,		65534,	-1,		-1,	65535,		65535,	0,	0
-	EXinGauge5		= EXin5,		"External In5"				"",				0,		65534,	-1,		-1,	65535,		65535,	0,	0
-	EXinGauge6		= EXin6,		"External In6"				"",				0,		65534,	-1,		-1,	65535,		65535,	0,	0
-    EXinGauge7		= EXin7,		"External In7"				"",				0,		65534,	-1,		-1,	65535,		65535,	0,	0
-	EXinGauge8		= EXin8,		"External In8"				"",				0,		65534,	-1,		-1,	65535,		65535,	0,	0
-	EXinGauge9		= EXin9,		"External In9"				"",				0,		65534,	-1,		-1,	65535,		65535,	0,	0
-	EXinGauge10		= EXin10,		"External In10"				"",				0,		65534,	-1,		-1,	65535,		65535,	0,	0
-    EXinGauge11		= EXin11,		"External In11"				"",				0,		65534,	-1,		-1,	65535,		65535,	0,	0
-	EXinGauge12		= EXin12,		"External In12"				"",				0,		65534,	-1,		-1,	65535,		65535,	0,	0
-	EXinGauge13		= EXin13,		"External In13"				"",				0,		65534,	-1,		-1,	65535,		65535,	0,	0
-	EXinGauge14		= EXin14,		"External In14"				"",				0,		65534,	-1,		-1,	65535,		65535,	0,	0
-    EXinGauge15		= EXin15,		"External In15"				"",				0,		65534,	-1,		-1,	65535,		65535,	0,	0
+	EXinGauge0		= EXin0,		{ stringValue(EXin00Alias) },		        "",				0,		65534,  -1,		-1,	65535,		65535,	0,	0
+	EXinGauge1		= EXin1,		{ stringValue(EXin01Alias) },				"",				0,		65534,	-1,		-1,	65535,		65535,	0,	0
+	EXinGauge2		= EXin2,		{ stringValue(EXin02Alias) },				"",				0,		65534,	-1,		-1,	65535,		65535,	0,	0
+    EXinGauge3		= EXin3,		{ stringValue(EXin03Alias) },				"",				0,		65534,	-1,		-1,	65535,		65535,	0,	0
+	EXinGauge4		= EXin4,		{ stringValue(EXin04Alias) },				"",				0,		65534,	-1,		-1,	65535,		65535,	0,	0
+	EXinGauge5		= EXin5,		{ stringValue(EXin05Alias) },				"",				0,		65534,	-1,		-1,	65535,		65535,	0,	0
+	EXinGauge6		= EXin6,		{ stringValue(EXin06Alias) },				"",				0,		65534,	-1,		-1,	65535,		65535,	0,	0
+    EXinGauge7		= EXin7,		{ stringValue(EXin07Alias) },				"",				0,		65534,	-1,		-1,	65535,		65535,	0,	0
+	EXinGauge8		= EXin8,		{ stringValue(EXin08Alias) },				"",				0,		65534,	-1,		-1,	65535,		65535,	0,	0
+	EXinGauge9		= EXin9,		{ stringValue(EXin09Alias) },				"",				0,		65534,	-1,		-1,	65535,		65535,	0,	0
+	EXinGauge10		= EXin10,		{ stringValue(EXin10Alias) },				"",				0,		65534,	-1,		-1,	65535,		65535,	0,	0
+    EXinGauge11		= EXin11,		{ stringValue(EXin11Alias) },				"",				0,		65534,	-1,		-1,	65535,		65535,	0,	0
+	EXinGauge12		= EXin12,		{ stringValue(EXin12Alias) },				"",				0,		65534,	-1,		-1,	65535,		65535,	0,	0
+	EXinGauge13		= EXin13,		{ stringValue(EXin13Alias) },				"",				0,		65534,	-1,		-1,	65535,		65535,	0,	0
+	EXinGauge14		= EXin14,		{ stringValue(EXin14Alias) },				"",				0,		65534,	-1,		-1,	65535,		65535,	0,	0
+    EXinGauge15		= EXin15,		{ stringValue(EXin15Alias) },				"",				0,		65534,	-1,		-1,	65535,		65535,	0,	0
 	
    gaugeCategory = "Other"
    clockGauge        = secl,          	"Clock",              	"Seconds",  0,   255,     10,    10,  245,  245, 0, 0
@@ -1036,22 +1087,22 @@ cmdtestout1650dc = "E\x30\x02"
 
 
    indicator = { ready              }, "Not Ready",     "Ready",        white, black, green,    black
-   ;indicator = { crank              }, "Not Cranking",  "Cranking",     white, black, green,    black
-   ;indicator = { startw             }, "ASE OFF",       "ASE",          white, black, green,    black
-   ;indicator = { warmup             }, "WUE OFF",       "WUE",          white, black, green,    black
-   ;indicator = { tpsaccaen          }, "Accel",         "Accel",        white, black, green,    black
-   ;indicator = { tpsaccden          }, "Decel",         "Decel",        white, black, green,    black
-   ;indicator = { mapaccaen          }, "MAP Accel",     "MAP Accel",    white, black, green,    black
-   ;indicator = { mapaccden          }, "MAP Decel",     "MAP Decel",    white, black, green,    black
-   ;indicator = { error              }, "No Errors",     "ERROR",        white, black, green,    black
-   ;indicator = { (tps > tpsflood) && (rpm < crankRPM) }, "FLOOD OFF", "FLOOD CLEAR",      white, black, red,   black
-   ;indicator = { DFCOOn             }, "DFCO OFF",      "DFCO On",      white, black, red,      black
-   ;indicator = { launchHard         }, "Launch Hard",   "Launch Hard",  white, black, green,    black
-   ;indicator = { launchSoft         }, "Launch Soft",   "Launch Soft",  white, black, green,    black
-   ;indicator = { softlimitOn        }, "Soft Limit OFF","Soft Limiter", white, black, red,      black
-   ;;indicator = { hardLimitOn        }, "Hard Limit OFF","Hard Limiter", white, black, red,      black
-   ;indicator = { boostCutOut        }, "Boost Cut OFF", "Boost Cut",    white, black, red,      black
-   ;indicator = { sync               }, "No Sync",       "Sync",         white, black, green,    black
+    indicator = { digitaloutput1     }, "Out1 OFF",           "Out1 ON",         Red,    black,  green,   black
+    indicator = { digitaloutput2     }, "Out2 OFF",           "Out2 ON",         Red,    black,  green,   black
+    indicator = { digitaloutput3     }, "Out3 OFF",           "Out3 ON",         Red,    black,  green,   black
+	indicator = { digitaloutput4     }, "Out4 OFF",           "Out4 ON",         Red,    black,  green,   black
+	indicator = { digitaloutput5     }, "Out5 OFF",           "Out5 ON",         Red,    black,  green,   black
+	indicator = { digitaloutput6     }, "Out6 OFF",           "Out6 ON",         Red,    black,  green,   black
+	indicator = { digitaloutput7     }, "Out7 OFF",           "Out7 ON",         Red,    black,  green,   black
+	indicator = { digitaloutput8     }, "Out8 OFF",           "Out8 ON",         Red,    black,  green,   black
+	indicator = { digitaloutput9     }, "Out9 OFF",           "Out9 ON",         Red,    black,  green,   black
+	indicator = { digitaloutput10    }, "Out10 OFF",          "Out10 ON",        Red,    black,  green,   black
+	indicator = { digitaloutput11    }, "Out11 OFF",          "Out11 ON",        Red,    black,  green,   black
+	indicator = { digitaloutput12    }, "Out12 OFF",          "Out12 ON",        Red,    black,  green,   black
+	indicator = { digitaloutput13    }, "Out13 OFF",          "Out13 ON",        Red,    black,  green,   black
+	indicator = { digitaloutput14    }, "Out14 OFF",          "Out14 ON",        Red,    black,  green,   black
+	indicator = { digitaloutput15    }, "Out15 OFF",          "Out15 ON",        Red,    black,  green,   black
+	indicator = { digitaloutput16    }, "Out16 OFF",          "Out16 ON",        Red,    black,  green,   black
 
 ;-------------------------------------------------------------------------------
 
