--- a/experimental/mini_gpiov3_003exp/reference/mini gpiov3_003.ini
+++ b/experimental/mini_gpiov3_003exp/reference/mini gpiov3_003.ini
@@ -44,7 +44,24 @@
    ;
    ; type List: value will be index.
     tsCanId        	= bits,   	U08,   [0:3], "CAN ID 0", "CAN ID 1", "CAN ID 2", "CAN ID 3", "CAN ID 4", "CAN ID 5", "CAN ID 6", "CAN ID 7", "CAN ID 8", "CAN ID 9", "CAN ID 10","CAN ID 11","CAN ID 12","CAN ID 13","CAN ID 14","INVALID"
-
+	EXin00Alias  = string, ASCII, 20
+	EXin01Alias  = string, ASCII, 20 
+    EXin02Alias  = string, ASCII, 20 
+    EXin03Alias  = string, ASCII, 20 
+    EXin04Alias  = string, ASCII, 20 
+    EXin05Alias  = string, ASCII, 20 
+    EXin06Alias  = string, ASCII, 20 
+    EXin07Alias  = string, ASCII, 20 
+    EXin08Alias  = string, ASCII, 20 
+    EXin09Alias  = string, ASCII, 20 
+    EXin10Alias  = string, ASCII, 20 
+    EXin11Alias  = string, ASCII, 20 
+    EXin12Alias  = string, ASCII, 20 
+    EXin13Alias  = string, ASCII, 20 
+    EXin14Alias  = string, ASCII, 20 
+    EXin15Alias  = string, ASCII, 20 
+    
+	
 [Constants]
 
    ;----------------------------------------------------------------------------
@@ -564,8 +581,10 @@ page = 3
       ;  unused3_97         = scalar, U08,    97,        "",       1, 0, 0, 2, 0
       ;  unused3_98         = scalar, U08,    98,        "",       1, 0, 0, 2, 0
         unused3_99         = scalar, U08,    99,        "",       1, 0, 0, 2, 0
-        unused3_100        = scalar, U08,    100,       "",       1, 0, 0, 2, 0
-        unused3_101        = scalar, U08,    101,       "",       1, 0, 0, 2, 0
+    ;    unused3_100        = scalar, U08,    100,       "",       1, 0, 0, 2, 0
+    ;    unused3_101        = scalar, U08,    101,       "",       1, 0, 0, 2, 0
+        gpio_obd_address  	= bits,   U16,    100, 		 [0:10],   $CAN_ADDRESS_HEX
+	    
         unused3_102        = scalar, U08,    102,       "",       1, 0, 0, 2, 0
         unused3_103        = scalar, U08,    103,       "",       1, 0, 0, 2, 0
         unused3_104        = scalar, U08,    104,       "",       1, 0, 0, 25, 0
@@ -719,7 +738,8 @@ page = 3
         unused3_252        = scalar, U08,    252,       "",       1, 0, 0, 255, 0
         unused3_253        = scalar, U08,    253,       "",       1, 0, 0, 255, 0
         unused3_254        = scalar, U08,    254,       "",       1, 0, 0, 255, 0
-        unused3_255        = scalar, U08,    255,       "",       1, 0, 0, 255, 0	
+		pwm_opt_load_a_offset= scalar, U08,    255,       "",       1, 0, 0, 255, 0	
+        ;unused3_255        = scalar, U08,    255,       "",       1, 0, 0, 255, 0	
 		
 ;---------------------------------------------------------------------------------	 
 [ConstantsExtensions]
@@ -727,9 +747,27 @@ page = 3
 	 requiresPowerCycle = pinLayout
 	 requiresPowerCycle = can1enable
 	 requiresPowerCycle = can0enable
+	 requiresPowerCycle = gpio_obd_address
 	 
+	 defaultValue = gpio_obd_address, 2281
      defaultValue = pinLayout,   1
-
+	 defaultValue = EXin00Alias, "EXin 00"
+	 defaultValue = EXin01Alias, "EXin 01"
+     defaultValue = EXin02Alias, "EXin 02"
+     defaultValue = EXin03Alias, "EXin 03"
+     defaultValue = EXin04Alias, "EXin 04"
+     defaultValue = EXin05Alias, "EXin 05"
+     defaultValue = EXin06Alias, "EXin 06"
+     defaultValue = EXin07Alias, "EXin 07"
+     defaultValue = EXin08Alias, "EXin 08"
+     defaultValue = EXin09Alias, "EXin 09"
+     defaultValue = EXin10Alias, "EXin 10"
+     defaultValue = EXin11Alias, "EXin 11"
+     defaultValue = EXin12Alias, "EXin 12"
+     defaultValue = EXin13Alias, "EXin 13"
+     defaultValue = EXin14Alias, "EXin 14"
+	 defaultValue = EXin15Alias, "EXin 15"
+	 
     ;Default pins
 
     ;defaultValue = tachoPin,    0
@@ -824,9 +862,10 @@ menuDialog = main
         field = "GPIO Board Pin Layout",       pinLayout 
 		field = "Connection to Speeduino Type", speeduinoConnection
 		field = "Speeduino Realtime Base CanBus Address", speeduinoBaseCan
+		field = "GPIO OBD address", gpio_obd_address
 			
-	dialog = broadcast_input_enable ,"",xAxis
-		field = "Use Speeduino Realtime Broadcast", use_realtime_broadcast
+	;dialog = broadcast_input_enable ,"",xAxis
+	;	field = "Use Speeduino Realtime Broadcast", use_realtime_broadcast
 			
 	dialog = blank1 , ""
 		field = ""
@@ -884,6 +923,26 @@ menuDialog = main
 		field = "", num_bytes13, {exinsel13}
 		field = "", num_bytes14, {exinsel14}
 		field = "", num_bytes15, {exinsel15}
+
+        dialog = input_alias, "", yAxis
+            field = "Input Alias"
+            field = "", EXin00Alias	, {exinsel0}
+			field = "", EXin01Alias , {exinsel1}
+            field = "", EXin02Alias , {exinsel2}
+            field = "", EXin03Alias , {exinsel3}
+            field = "", EXin04Alias , {exinsel4}
+            field = "", EXin05Alias , {exinsel5}
+            field = "", EXin06Alias , {exinsel6}
+            field = "", EXin07Alias , {exinsel7}
+            field = "", EXin08Alias , {exinsel8}
+            field = "", EXin09Alias , {exinsel9}
+            field = "", EXin10Alias , {exinsel10}
+            field = "", EXin11Alias , {exinsel11}
+            field = "", EXin12Alias , {exinsel12}
+            field = "", EXin13Alias , {exinsel13}
+            field = "", EXin14Alias , {exinsel14}
+            field = "", EXin15Alias , {exinsel15}
+            
 		
 	dialog = input_offset_selectionW, "External Input offset Selection", yAxis
 		field = "Channel 0 select", exinsel0 
@@ -904,10 +963,11 @@ menuDialog = main
 		field = "Channel 15 select", exinsel15	
 		
 	dialog = external_input	,""	,xAxis
+		panel = input_alias
 		panel = input_offset_selectionW, West
 		panel = input_offset_selectionC, Center
 		panel = input_offset_selectionE, East
-		panel = input_byte_selection
+		panel = input_byte_selection	
 		
 	dialog = external_output
 	;	panel = output_offset_selectionW, West
@@ -916,7 +976,7 @@ menuDialog = main
 	dialog = external_config, "External IO Configuration", border
 		panel = external_input, South
 		panel = blank1, Center
-		panel = broadcast_input_enable, North
+	;	panel = broadcast_input_enable, North
 		;panel = external_output
 		
     dialog = outputtest_warningmessage, ""
@@ -1409,22 +1469,22 @@ cmdtestout1650dc = "E\x30\x02"
     AinGauge15		= Ain15,		"Analog In15"				"",				0,		1024,	-1,		-1,	1025,		1025,	0,	0
 
    	gaugeCategory = "External Inputs"
-	EXinGauge0		= EXin0,		"External In0"				"",				0,		65534,  -1,		-1,	65535,		65535,	0,	0
-	EXinGauge1		= EXin1,		"External In1"				"",				0,		65534,	-1,		-1,	65535,		65535,	0,	0
-	EXinGauge2		= EXin2,		"External In2"				"",				0,		65534,	-1,		-1,	65535,		65535,	0,	0
-    EXinGauge3		= EXin3,		"External In3"				"",				0,		65534,	-1,		-1,	65535,		65535,	0,	0
-	EXinGauge4		= EXin4,		"External In4"				"",				0,		65534,	-1,		-1,	65535,		65535,	0,	0
-	EXinGauge5		= EXin5,		"External In5"				"",				0,		65534,	-1,		-1,	65535,		65535,	0,	0
-	EXinGauge6		= EXin6,		"External In6"				"",				0,		65534,	-1,		-1,	65535,		65535,	0,	0
-    EXinGauge7		= EXin7,		"External In7"				"",				0,		65534,	-1,		-1,	65535,		65535,	0,	0
-	EXinGauge8		= EXin8,		"External In8"				"",				0,		65534,	-1,		-1,	65535,		65535,	0,	0
-	EXinGauge9		= EXin9,		"External In9"				"",				0,		65534,	-1,		-1,	65535,		65535,	0,	0
-	EXinGauge10		= EXin10,		"External In10"				"",				0,		65534,	-1,		-1,	65535,		65535,	0,	0
-    EXinGauge11		= EXin11,		"External In11"				"",				0,		65534,	-1,		-1,	65535,		65535,	0,	0
-	EXinGauge12		= EXin12,		"External In12"				"",				0,		65534,	-1,		-1,	65535,		65535,	0,	0
-	EXinGauge13		= EXin13,		"External In13"				"",				0,		65534,	-1,		-1,	65535,		65535,	0,	0
-	EXinGauge14		= EXin14,		"External In14"				"",				0,		65534,	-1,		-1,	65535,		65535,	0,	0
-    EXinGauge15		= EXin15,		"External In15"				"",				0,		65534,	-1,		-1,	65535,		65535,	0,	0
+	EXinGauge0		= EXin0,		{ stringValue(EXin00Alias) },		        "",				0,		65534,  -1,		-1,	65535,		65535,	0,	0
+	EXinGauge1		= EXin1,		{ stringValue(EXin01Alias) },				"",				0,		65534,	-1,		-1,	65535,		65535,	0,	0
+	EXinGauge2		= EXin2,		{ stringValue(EXin02Alias) },				"",				0,		65534,	-1,		-1,	65535,		65535,	0,	0
+    EXinGauge3		= EXin3,		{ stringValue(EXin03Alias) },				"",				0,		65534,	-1,		-1,	65535,		65535,	0,	0
+	EXinGauge4		= EXin4,		{ stringValue(EXin04Alias) },				"",				0,		65534,	-1,		-1,	65535,		65535,	0,	0
+	EXinGauge5		= EXin5,		{ stringValue(EXin05Alias) },				"",				0,		65534,	-1,		-1,	65535,		65535,	0,	0
+	EXinGauge6		= EXin6,		{ stringValue(EXin06Alias) },				"",				0,		65534,	-1,		-1,	65535,		65535,	0,	0
+    EXinGauge7		= EXin7,		{ stringValue(EXin07Alias) },				"",				0,		65534,	-1,		-1,	65535,		65535,	0,	0
+	EXinGauge8		= EXin8,		{ stringValue(EXin08Alias) },				"",				0,		65534,	-1,		-1,	65535,		65535,	0,	0
+	EXinGauge9		= EXin9,		{ stringValue(EXin09Alias) },				"",				0,		65534,	-1,		-1,	65535,		65535,	0,	0
+	EXinGauge10		= EXin10,		{ stringValue(EXin10Alias) },				"",				0,		65534,	-1,		-1,	65535,		65535,	0,	0
+    EXinGauge11		= EXin11,		{ stringValue(EXin11Alias) },				"",				0,		65534,	-1,		-1,	65535,		65535,	0,	0
+	EXinGauge12		= EXin12,		{ stringValue(EXin12Alias) },				"",				0,		65534,	-1,		-1,	65535,		65535,	0,	0
+	EXinGauge13		= EXin13,		{ stringValue(EXin13Alias) },				"",				0,		65534,	-1,		-1,	65535,		65535,	0,	0
+	EXinGauge14		= EXin14,		{ stringValue(EXin14Alias) },				"",				0,		65534,	-1,		-1,	65535,		65535,	0,	0
+    EXinGauge15		= EXin15,		{ stringValue(EXin15Alias) },				"",				0,		65534,	-1,		-1,	65535,		65535,	0,	0
 	
    gaugeCategory = "Other"
    clockGauge        = secl,          	"Clock",              	"Seconds",  0,   255,     10,    10,  245,  245, 0, 0
@@ -1666,6 +1726,7 @@ cmdtestout1650dc = "E\x30\x02"
    time             = { timeNow                                      } ; "timeNow" is a parameterless built-in function.
    seconds          = { secl                                          }; 
    
+   pwma_load = { getChannelValueByOffset( pwm_opt_load_a_offset ) }
 ;-------------------------------------------------------------------------------
 
 [Datalog]
@@ -1715,6 +1776,7 @@ cmdtestout1650dc = "E\x30\x02"
    ;entry = canin_gauge6,    "CanIn CH6",   int,     "%d"
    ;entry = canin_gauge7,    "CanIn CH7",   int,     "%d"
    ;entry = canin_gauge8,    "CanIn CH8",   int,     "%d"
+   ;   entry = sensor01, { stringValue(sensor01Alias) }, float, "%.1f";, { sensor01_source }
 
 
 [LoggerDefinition]
