--- a/GPIO MINI/mini_gpiov3_001/reference/mini gpiov3_001.ini
+++ b/GPIO MINI/mini_gpiov3_001/reference/mini gpiov3_001.ini
@@ -116,14 +116,14 @@
    pageIdentifier      = "\$tsCanId\x01" , "\$tsCanId\x02"
    pageActivationDelay = 10
 #if CAN_COMMANDS
-   burnCommand         = "r\$tsCanId\x42\x00\x00\x00\x00" , "r\$tsCanId\x42\x00\x00\x00\x00"
+   burnCommand         = "r\$tsCanId\x42\x01\x00\x00\x00" , "r\$tsCanId\x42\x02\x00\x00\x00"
    pageActivate        = "r\$tsCanId\x50\x01\x00\x00\x00" , "r\$tsCanId\x50\x02\x00\x00\x00"
-   pageReadCommand     = "r\$tsCanId\x56\x00\x00\x80\x00" , "r\$tsCanId\x56\x00\x00\x00\x10"
+   pageReadCommand     = "r\$tsCanId\x56%2o%2c" , "r\$tsCanId\x56%2o%2c"
    pageValueWrite      = "r\$tsCanId\x57%2o%v" , "r\$tsCanId\x57%2o%v"
 #else   
    burnCommand         = "B\001" , "B\002"
    pageActivate        = "P\001" , "P\002"
-   pageReadCommand     = "V" , "V"
+   pageReadCommand     = "V%2o%2c" , "V%2o%2c"
    pageValueWrite      = "W\x01%2o%v" , "W\x02%2o%v"
 #endif
    ;  pageChunkWrite      = ""      ; No chunk write for standard MS
