fix ts warning for msq error

--- a/GPIO MINI/mini_gpiov3_001/reference/mini gpiov3_001.ini
+++ b/GPIO MINI/mini_gpiov3_001/reference/mini gpiov3_001.ini
@@ -354,7 +354,7 @@ page = 2
 	
      port_Enabled      				= array ,  U08,    0,    	[  16], "on/off",   1.00000,   0.00000,   0.00,    1.00,     0 ; * (  16 bytes)
 ;1 if enabled 0 if not enabled
-     port_Condition    				= array ,  U08,    16,    	[  16x1] "",         1.00000,   0.00000,   0.00,  255.00,     0 ; * ( 16 bytes)
+     port_Condition    				= array ,  U08,    16,    	[  16] "",         1.00000,   0.00000,   0.00,  255.00,     0 ; * ( 16 bytes)
 ;<60 =61 >62 &38    
 	 port_Condition_relationship    = array ,  U08,    32,    	[  16], "",         1.00000,   0.00000,   0.00,  255.00,     0 ; * ( 16 bytes)
 ;none = 32, or = 124, AND = 38, ! = 33	
@@ -362,15 +362,15 @@ page = 2
 ;1 on 0 off
      port_PortValue    				= array ,  U08,    64,    	[    16], "",         1.00000,   0.00000,   0.00,  255.00,     0 ; * (  16 bytes)
 ;1 if active high 0 if active low
-     port_OutSize      				= array ,  U08,    80,    	[  16x1], "",         1.00000,   0.00000,   0.00,  255.00,     0 ; * ( 16 bytes)
+     port_OutSize      				= array ,  U08,    80,    	[  16], "",         1.00000,   0.00000,   0.00,  255.00,     0 ; * ( 16 bytes)
 ;unsure of purpose but must be present
-     port_OutOffset    				= array ,  U16,    96,    	[  16x1], "",         1.00000,   0.00000,   0.00, 32767.0,     0 ; * ( 32 bytes)
+     port_OutOffset    				= array ,  U16,    96,    	[  16], "",         1.00000,   0.00000,   0.00, 32767.0,     0 ; * ( 32 bytes)
 ;port offset refers to the offset value from the output channels
-     port_Threshold    				= array ,  U16,    128,    	[  16x1], "",         1.00000,   0.00000,	0.0,32767.0,     0 ; * ( 32 bytes)
+     port_Threshold    				= array ,  U16,    128,    	[  16], "",         1.00000,   0.00000,	0.0,32767.0,     0 ; * ( 32 bytes)
 ;threshhold value for on/off
-     port_Hysteresis   				= array ,  U16,    160,    	[  16x1], "",         1.00000,   0.00000,	0.0,32767.0,     0 ; * ( 32 bytes)
+     port_Hysteresis   				= array ,  U16,    160,    	[  16], "",         1.00000,   0.00000,	0.0,32767.0,     0 ; * ( 32 bytes)
 ;hysteresis value for on/off
-	 port_CanId	   					= array ,  U08,    192,    	[  16x1], "",         1.00000,   0.00000,   0.00,  255.00,     0 ; * ( 16 bytes)
+	 port_CanId	   					= array ,  U08,    192,    	[  16], "",         1.00000,   0.00000,   0.00,  255.00,     0 ; * ( 16 bytes)
 
 	 ;ends at 206
         unused2_208        = scalar, U08,    208,       "",       1, 0, 0, 255, 0
@@ -998,7 +998,7 @@ cmdtestout1650dc = "E\x30\x02"
    ;tpsADCGauge       = tpsADC,        "TPS ADC",            "",        0,   255,     -1,    -1,  256,  256, 0, 0
    #batVoltGauge      = batteryVoltage,        "BAT V",              "",        0,   255,     -1,    -1,  256,  256, 0, 0
 
-   gaugeCategory = "Room Zone Sensor inputs"
+;   gaugeCategory = "Room Zone Sensor inputs"
 ;	Bedroom1			= Bedroom1_Temp,			"Bedroom 1"					"",				0,		35,	-1,		-1,	36,		36,	0,	0
 ;	Bedroom2			= Bedroom2_Temp,			"Bedroom 2"					"",				0,		35,	-1,		-1,	36,		36,	0,	0
 ;	MasterBedroomAIR	= MasterBedroomAIR_Temp,	"Master Bedroom AIR"		"",				0,		35,	-1,		-1,	36,		36,	0,	0
@@ -1017,6 +1017,12 @@ cmdtestout1650dc = "E\x30\x02"
 ;	LivingRoomFLOOR		= LivingRoomFLOOR_Temp,		"Living Room Floor"			"",				0,		35,	-1,		-1,	36,		36,	0,	0
 ;	DiningRoomAIR		= DiningRoomAIR_Temp,		"Dining Room Air"			"",				0,		35,	-1,		-1,	36,		36,	0,	0
 ;	DiningRoomFLOOR		= DiningRoomFLOOR_Temp,		"Dining Room Floor"			"",				0,		35,	-1,		-1,	36,		36,	0,	0
+
+   	gaugeCategory = "Digital Inputs"
+	DinGauge1_8		= digitalinputs1_8,		"Digital Inputs 1-8",		        "",				0,		65534,  -1,		-1,	65535,		65535,	0,	0
+	DinGauge9_16	= digitalinputs9_16,	"Digital Inputs 9-16",				"",				0,		65534,	-1,		-1,	65535,		65535,	0,	0
+;	DinGauge17_24	= digitalinputs17_24,	"Digital Inputs 17-24",		        "",				0,		65534,  -1,		-1,	65535,		65535,	0,	0
+;	DinGauge25_32	= digitalinputs25_32,	"Digital Inputs 25-32",				"",				0,		65534,	-1,		-1,	65535,		65535,	0,	0
 
    	gaugeCategory = "AnalogInputs"
 	AinGauge0		= Ain0,		"Analog In0"				"",				0,		1024,	-1,		-1,	1025,		1025,	0,	0
