few bug fixes updated expanded dev dash fie for ts

--- a/GPIO STD/std_gpio_V1.000exp/reference/std_gpio_v1_000.ini
+++ b/GPIO STD/std_gpio_V1.000exp/reference/std_gpio_v1_000.ini
@@ -3319,36 +3319,28 @@ cmdtestout1650dc = "E\x30\x02"
 ;	DiningRoomFLOOR		= DiningRoomFLOOR_Temp,		"Dining Room Floor"			"",				0,		35,	-1,		-1,	36,		36,	0,	0
 
    	gaugeCategory = "Digital Inputs"
-	DinGauge1_8		= digitalinputs1_8,		"Digital Inputs 1-8",		        "",				0,		65534,  -1,		-1,	65535,		65535,	0,	0
-	DinGauge9_16	= digitalinputs9_16,	"Digital Inputs 9-16",				"",				0,		65534,	-1,		-1,	65535,		65535,	0,	0
-	DinGauge17_24	= digitalinputs17_24,	"Digital Inputs 17-24",		        "",				0,		65534,  -1,		-1,	65535,		65535,	0,	0
-	DinGauge25_32	= digitalinputs25_32,	"Digital Inputs 25-32",				"",				0,		65534,	-1,		-1,	65535,		65535,	0,	0
-	;DinGauge2		= Din2,		{ stringValue(EXin02Alias) },				"",				0,		65534,	-1,		-1,	65535,		65535,	0,	0
-    ;DinGauge3		= Din3,		{ stringValue(EXin03Alias) },				"",				0,		65534,	-1,		-1,	65535,		65535,	0,	0
-	;DinGauge4		= Din4,		{ stringValue(EXin04Alias) },				"",				0,		65534,	-1,		-1,	65535,		65535,	0,	0
-	;DinGauge5		= Din5,		{ stringValue(EXin05Alias) },				"",				0,		65534,	-1,		-1,	65535,		65535,	0,	0
-	;DinGauge6		= Din6,		{ stringValue(EXin06Alias) },				"",				0,		65534,	-1,		-1,	65535,		65535,	0,	0
-    ;EXinGauge7		= EXin7,		{ stringValue(EXin07Alias) },				"",				0,		65534,	-1,		-1,	65535,		65535,	0,	0
-	;EXinGauge8		= EXin8,		{ stringValue(EXin08Alias) },				"",				0,		65534,	-1,		-1,	65535,		65535,	0,	0
-	;EXinGauge9		= EXin9,		{ stringValue(EXin09Alias) },				"",				0,		65534,	-1,		-1,	65535,		65535,	0,	0
-	;EXinGauge10		= EXin10,		{ stringValue(EXin10Alias) },				"",				0,		65534,	-1,		-1,	65535,		65535,	0,	0
-    ;EXinGauge11		= EXin11,		{ stringValue(EXin11Alias) },				"",				0,		65534,	-1,		-1,	65535,		65535,	0,	0
-	;EXinGauge12		= EXin12,		{ stringValue(EXin12Alias) },				"",				0,		65534,	-1,		-1,	65535,		65535,	0,	0
-	;EXinGauge13		= EXin13,		{ stringValue(EXin13Alias) },				"",				0,		65534,	-1,		-1,	65535,		65535,	0,	0
-	;EXinGauge14		= EXin14,		{ stringValue(EXin14Alias) },				"",				0,		65534,	-1,		-1,	65535,		65535,	0,	0
-    ;EXinGauge15		= EXin15,		{ stringValue(EXin15Alias) },				"",				0,		65534,	-1,		-1,	65535,		65535,	0,	0
+	DinGauge1_8		= digitalinputs1_8,		"Digital Inputs 1-8",		        "",				0,		254,  -1,		-1,	255,		255,	0,	0
+	DinGauge9_16	= digitalinputs9_16,	"Digital Inputs 9-16",				"",				0,		254,	-1,		-1,	255,		255,	0,	0
+	DinGauge17_24	= digitalinputs17_24,	"Digital Inputs 17-24",		        "",				0,		254,  -1,		-1,	255,		255,	0,	0
+	DinGauge25_32	= digitalinputs25_32,	"Digital Inputs 25-32",				"",				0,		254,	-1,		-1,	255,		255,	0,	0
+
+   	gaugeCategory = "Digital Outputs"
+	DoutGauge1_8	= digitaloutputs1_8,    "Digital Outputs 1-8",		        "",				0,		254,  -1,		-1,	255,		255,	0,	0
+	DoutGauge9_16	= digitaloutputs9_16,	"Digital Outputs 9-16",				"",				0,		254,	-1,		-1,	255,		255,	0,	0
+	DoutGauge17_24	= digitaloutputs17_24,	"Digital Outputs 17-24",		    "",				0,		254,  -1,		-1,	255,		255,	0,	0
+	DoutGauge25_32	= digitaloutputs25_32,	"Digital Outputs 25-32",		    "",				0,		254,	-1,		-1,	255,		255,	0,	0
 
    	gaugeCategory = "AnalogInputs"
-	AinGauge0		= Ain0,		"Analog In0"				"",				0,		1024,	-1,		-1,	1025,		1025,	0,	0
-	AinGauge1		= Ain1,		"Analog In1"				"",				0,		1024,	-1,		-1,	1025,		1025,	0,	0
-	AinGauge2		= Ain2,		"Analog In2"				"",				0,		1024,	-1,		-1,	1025,		1025,	0,	0
-    AinGauge3		= Ain3,		"Analog In3"				"",				0,		1024,	-1,		-1,	1025,		1025,	0,	0
-	AinGauge4		= Ain4,		"Analog In4"				"",				0,		1024,	-1,		-1,	1025,		1025,	0,	0
-	AinGauge5		= Ain5,		"Analog In5"				"",				0,		1024,	-1,		-1,	1025,		1025,	0,	0
-	AinGauge6		= Ain6,		"Analog In6"				"",				0,		1024,	-1,		-1,	1025,		1025,	0,	0
-    AinGauge7		= Ain7,		"Analog In7"				"",				0,		1024,	-1,		-1,	1025,		1025,	0,	0
-	AinGauge8		= Ain8,		"Analog In8"				"",				0,		1024,	-1,		-1,	1025,		1025,	0,	0
-	AinGauge9		= Ain9,		"Analog In9"				"",				0,		1024,	-1,		-1,	1025,		1025,	0,	0
+	AinGauge0		= Ain0,		    "Analog In0"				"",				0,		1024,	-1,		-1,	1025,		1025,	0,	0
+	AinGauge1		= Ain1,		    "Analog In1"				"",				0,		1024,	-1,		-1,	1025,		1025,	0,	0
+	AinGauge2		= Ain2,		    "Analog In2"				"",				0,		1024,	-1,		-1,	1025,		1025,	0,	0
+    AinGauge3		= Ain3,		    "Analog In3"				"",				0,		1024,	-1,		-1,	1025,		1025,	0,	0
+	AinGauge4		= Ain4,		    "Analog In4"				"",				0,		1024,	-1,		-1,	1025,		1025,	0,	0
+	AinGauge5		= Ain5,		    "Analog In5"				"",				0,		1024,	-1,		-1,	1025,		1025,	0,	0
+	AinGauge6		= Ain6,		    "Analog In6"				"",				0,		1024,	-1,		-1,	1025,		1025,	0,	0
+    AinGauge7		= Ain7,		    "Analog In7"				"",				0,		1024,	-1,		-1,	1025,		1025,	0,	0
+	AinGauge8		= Ain8,		    "Analog In8"				"",				0,		1024,	-1,		-1,	1025,		1025,	0,	0
+	AinGauge9		= Ain9,		    "Analog In9"				"",				0,		1024,	-1,		-1,	1025,		1025,	0,	0
 	AinGauge10		= Ain10,		"Analog In10"				"",				0,		1024,	-1,		-1,	1025,		1025,	0,	0
     AinGauge11		= Ain11,		"Analog In11"				"",				0,		1024,	-1,		-1,	1025,		1025,	0,	0
 	AinGauge12		= Ain12,		"Analog In12"				"",				0,		1024,	-1,		-1,	1025,		1025,	0,	0
